crates/ferrum-interfaces/tests/ui/vnext/fail/synchronized_sequence_cannot_dispatch.stderr
error[E0308]: mismatched types
  --> tests/ui/vnext/fail/synchronized_sequence_cannot_dispatch.rs:18:30
   |
18 |         std::slice::from_ref(&synchronized),
   |         -------------------- ^^^^^^^^^^^^^ expected `&TrustedActiveSequenceBinding`, found `&SynchronizedSequencePermit<'_, '_, R>`
   |         |
   |         arguments to this function are incorrect
   |
   = note: expected reference `&TrustedActiveSequenceBinding`
              found reference `&ferrum_interfaces::vnext::SynchronizedSequencePermit<'_, '_, R>`
note: function defined here
  --> $RUST/core/src/slice/raw.rs
   |
   | pub const fn from_ref<T>(s: &T) -> &[T] {
   |              ^^^^^^^^
